[package]
name = "rwalk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }

crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
num-traits = "0.2.19"
num_cpus = "1.16.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
once_cell = "1.19"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.11"
url = "2.5.4"
logos = "0.15.0"
dashmap = "6.1.0"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-indicatif = "0.3.8"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
rayon = "1.10.0"
async-recursion = "1.1.1"
