[package]
name = "rwalk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }

crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
num-traits = "0.2.19"
num_cpus = "1.16.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "native-tls-vendored",
    "http2",
] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
once_cell = "1.20.3"
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }
logos = "0.15.0"
dashmap = { version = "6.1.0", features = ["serde"] }
itertools = "0.14.0"
tracing = "0.1.41"
tracing-indicatif = "0.3.9"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
rayon = "1.10.0"
async-recursion = "1.1.1"
pid-lite = "1.2.0"
pid = "4.0.0"
csv = "1.3.1"
atomic_float = "1.1.0"
owo-colors = "4.1.0"
urlencoding = "2.1.3"

# Examples
actix-web = "3.3.3"
indicatif = "0.17.11"
crossterm = "0.28.1"
serde_json = "1.0.138"
regex = "1.11.1"
hex = "0.4.3"
base64 = "0.22.1"


[profile.dev]
debug = false

[profile.release]
# strip = true
# lto = true
# codegen-units = 1
