[package]
name = "rwalk"
version = "0.10.0"
edition = "2021"
description = "A blazingly fast web directory scanner"
authors = ["cstef <hi@cstef.dev>"]
license = "MIT"
repository = "https://github.com/cestef/rwalk"
documentation = "https://rwalk.cstef.dev"
keywords = ["web", "directory", "fuzz", "bruteforce"]

[dependencies]
clap = { version = "4.5.29", features = ["derive", "string", "wrap_help"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
num-traits = "0.2.19"
num_cpus = "1.16.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "native-tls-vendored",
    "http2",
] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
once_cell = "1.20.3"
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }
logos = "0.15.0"
dashmap = { version = "6.1.0", features = ["serde"] }
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
rayon = "1.10.0"
async-recursion = "1.1.1"
atomic_float = "1.1.0"
owo-colors = "4.1.0"
urlencoding = "2.1.3"
serde_json = "1.0.138"
regex = "1.11.1"
hex = "0.4.3"
base64 = "0.22.1"
indicatif = "0.17.11"
tracing-indicatif = "0.3.9"
cowstr = "1.3.0"
tabled = { version = "0.18.0", features = ["ansi"] }
ptree = "0.5.2"
merge = "0.1.0"
toml = "0.8.20"
clap-help = "1.3.2"
termimad = "0.31.2"

[profile.dev]
debug = false
# strip = true
# lto = true
# codegen-units = 1
