[package]
name = "rwalk"
version = "0.10.0-dev"
edition = "2024"
description = "A blazingly fast web directory scanner"
authors = ["cstef <hi@cstef.dev>"]
license = "MIT"
repository = "https://github.com/cestef/rwalk"
documentation = "https://rwalk.cstef.dev"
homepage = "https://rwalk.cstef.dev"
keywords = ["web", "directory", "fuzz", "bruteforce"]

[dependencies]
clap = { version = "4.5.35", features = ["derive", "string", "wrap_help"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
num-traits = "0.2.19"
num_cpus = "1.16.0"
reqwest = { version = "0.12.15", default-features = false, features = [
    "native-tls-vendored",
    "http2",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
once_cell = "1.21.3"
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
logos = "0.15.0"
dashmap = { version = "6.1.0", features = ["serde"] }
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
rayon = "1.10.0"
async-recursion = "1.1.1"
atomic_float = "1.1.0"
owo-colors = "4.1.0"
urlencoding = "2.1.3"
serde_json = "1.0.140"
regex = "1.11.1"
hex = "0.4.3"
base64 = "0.22.1"
indicatif = "0.17.11"
tracing-indicatif = "0.3.9"
cowstr = "1.3.0"
tabled = { version = "0.18.0", features = ["ansi"] }
ptree = "0.5.2"
merge = "0.1.0"
toml = "0.8.20"
termimad = "0.31.2"
terminal-light = "1.7.0"
terminal_size = "0.4.2"
rhai = { version = "1.21.0", features = ["sync", "serde"] }
smartstring = "1.0.1"
criterion = { version = "0.5.1", features = ["async", "async_tokio"] }
clap-markdown = "0.1.4"
rustyline = "15.0.0"
async-trait = "0.1.88"

dyn-fields = { path = "../dyn-fields" }
lazy_static = "1"
